# calculadora-pypi

./: pyproject.toml
.github/workflows/: publish.yml
src/meu_pacote/: __init__.py  operacoes.py
src/tests/: test_operacoes.py
