[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculadora-pypi"
version = "0.1.0"
description = "Pacote exemplo com operações matemáticas"
readme = "README.md"
authors = [
    {name = "Ronnie Campos", email = "ronnie@email.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = []

[project.urls]
"Homepage" = "https://github.com/roniepris/calculadora-pypi"
